--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -349,8 +349,9 @@ Total Euro Amount: \euro3,000
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
-\subsection*{Journal Articles}
+\subsection*{Peer-Reviewed Journal Articles}
 \noindent
+\years{2023}\textbf{Xambó, A.} (Forthcoming). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2).\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
 {\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
@@ -450,8 +451,8 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2022d} \textsc{Invited Talk (online)} (October 26, 2022). "Designing networked algorithmic music performances - Creative coding as practice-led research". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Computational Music for All, GTCMT, Georgia Tech, Atlanta, GA, USA.\\ 
 \years{2022c} \textsc{Oral Presenter (online)} together with Goudarzi, V. (June 30, 2022). “The Mobile Audience as a Digital Musical Persona in Telematic Performance". \emph{NIME '22}. \emph{Waipapa Taumata Rau, Aotearoa / The University of Auckland}, New Zealand. \href{https://youtu.be/xu5ySfbqYs8}{[video]}\\
 \years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
-\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
-\years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
+\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". Music-data seminar series. \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
+\years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). "Grassrouters Music Performance: Past, Present and Future Directions of Grassroots \& Decentralised Organisation Structures for Network Music Performance". \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
 \years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K. (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
 \years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
 \emph{NYU Shanghai}, Shanghai, China. \href{https://youtu.be/F4UoH1hRMoU}{[video]}\\
@@ -582,7 +583,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Albums}
 \noindent
 
-\years{Forthcoming}Anna Xambó. \emph{detuning a tuning} [FLAC/MP3 files]. Barcelona/Sheffield: Carpal Tunnel.\\
+\years{2023}Anna Xambó. \emph{detuning a tuning} [FLAC/MP3 files]. Barcelona/Kettering: Carpal Tunnel.\\
 \years{2018}Anna Xambó. \emph{H2RI} [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas discos.\\
 \years{2013}peterMann. \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2011}peterMann. \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
@@ -599,6 +600,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Participation in Compilations}
 \noindent
 
+\years{Forthcoming}Anna Xambó. “mnnw (extract)" (3 min 56 sec) in \emph{LOLtrax001} [WAV/MP3 files]. LOL Editions. \\	
 \years{2020b}Anna Xambó. “Magnets" (4 min 21 sec) in \emph{Compassion Through Algorithms Vol. II} [WAV/MP3 files]. Sheffield: Light Entries. \\	
 \years{2020a}Anna Xambó. “Poème Symphonique For Tape Metronome: Variation I" (5 min 38 sec) in \emph{In Unison} [WAV/MP3 files]. Brussels: i.u. \\	
 \years{2019}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec). in \emph{10th Anniversary Festival en Tiempo Real - WoNoMute Playlist} [WAV file].\\
@@ -801,10 +803,10 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
-\years{05/2023--06/2023}Course: \emph{MTEC1005\_2223\_604 Industry Practice} (42 h). \# Students: $\sim$15-20. \\
+\years{05/2023--06/2023}Course: \emph{MTEC1005\_2223\_604 Music Industry Practice} (42 h). \# Students: $\sim$15--20. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
-\years{02/2023--03/2023}Course: \emph{MTEC1003\_2223\_603 Sound Analysis \& Synthesis} (14 h). \# Students: $\sim$35-40. \\
+\years{02/2023--03/2023}Course: \emph{MTEC1003\_2223\_603 Sound Analysis \& Synthesis} (14 h). \# Students: $\sim$35--40. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
 \years{01/2023--04/2023}Course: \emph{MATD2029 Digital Audio Electronics: Sensors \& Interfaces} (30 h). \# Students: $\sim$10. \\
@@ -918,6 +920,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\noindent
 
 \subsection*{PhD Students}
+\years{§1/2022--present}2nd supervisor of Christopher Cousin. DMU.\\
 \years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
 \years{04/2022--present}2nd supervisor of Eva Kára. DMU.
 
@@ -938,7 +941,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \section*{Assessment}
 \noindent
 
-%\years{Forthcoming}External PhD examiner for António Ramires (February X, 2023). PhD degree in XX, Universitat Pompeu Fabra. Barcelona, Spain.\\
+\years{02/2023}External PhD examiner for António Ramires (February 9, 2023). PhD thesis title: \emph{Automatic Characterization and Generation of Music Loops and Instrument Samples for Electronic Music Production}. PhD programme: Horizon 2020 MIP-Frontiers. Music Technology Group, Department of Information and Communication Technologies, Universitat Pompeu Fabra, Barcelona, Spain.\\
 \years{06/2022}External Master’s thesis examiner for Stephen Gardener (June 24, 2022), Master thesis title: \emph{"The Algorithmic Composition Explorer"}. Master's programme: Music, Communication and Technology. Department of Musicology, University of Oslo, Norway.\\
 \years{05/2022}External PhD examiner for Alejandro Iván Paz Ortiz (May 3, 2022). PhD thesis title: \emph{"On-the-fly Synthesizer Programming with Rule Learning"}. PhD degree in Computing, Universitat Politècnica de Catalunya - BarcelonaTech. Barcelona, Spain.\\
 \years{02/2022}PhD review for Robin Foster (February 24, 2022), PhD programme: DMU. Leicester, UK.\\
@@ -1026,6 +1029,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
 
+\years{2023}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2023). Mexico City, Mexico.\\
 \years{2022}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2022). Auckland, New Zealand.\\
 \years{2021b}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2022}. KAIST, Daejeon, Republic of Korea.\\
 \years{2021a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2021). Shanghai, China.\\
@@ -1075,11 +1079,11 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \noindent
 
 \years{2022}\emph{Personal and Ubiquitous Computing}. Springer.\\
-\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020).\\
+\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020, 2023).\\
 \years{2019a}\emph{Arts}. MDPI.\\
 \years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
-\years{2018b}\emph{Journal of New Music Research}. ScholarOne Manuscripts.\\
+\years{2018b}\emph{Journal of New Music Research}. Taylor \& Francis.\\
 \years{2018a}\emph{Transactions on Computing Education}. ACM.\\
 \years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society (2017, 2022).\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
@@ -1167,7 +1171,7 @@ Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
 Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
-Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
+Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio analysis (Audition, Sonic Visualiser), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
