--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -446,8 +446,12 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2023} \textsc{Invited Talk} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
+}. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
+\years{2022g} \textsc{Panel Member (online)} (December 13, 2022). "Music creation" with Rob Clouth (music creator), Marcelo Estrella (lawyer - Across Legal), Antonia Folguera (curator - SONAR), Anna Xambó (researcher and music creator - Institute of Sonic Creativity, DeMontfort University). Moderated by Sergi Jordà and Karma Peiró. \emph{Challenges and Opportunities in Music Tech - Open Debate}. Universitat Pompeu Fabra, Barcelona, Spain / online.\\ 
+\years{2022f} \textsc{Invited Talk/Workshop} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
 \years{2022e} \textsc{Invited Talk} (November 11, 2022). "HCI meets AI in Live Coding: A Practitioner's Perspective". \emph{Symposium Technoscientific
-Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, Finland.\\ 
+Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, Finland. \href{https://vimeo.com/779151561}{[video]}\\ 
 \years{2022d} \textsc{Invited Talk (online)} (October 26, 2022). "Designing networked algorithmic music performances - Creative coding as practice-led research". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Computational Music for All, GTCMT, Georgia Tech, Atlanta, GA, USA.\\ 
 \years{2022c} \textsc{Oral Presenter (online)} together with Goudarzi, V. (June 30, 2022). “The Mobile Audience as a Digital Musical Persona in Telematic Performance". \emph{NIME '22}. \emph{Waipapa Taumata Rau, Aotearoa / The University of Auckland}, New Zealand. \href{https://youtu.be/xu5ySfbqYs8}{[video]}\\
 \years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
@@ -550,27 +554,29 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2010b} \textsc{Poster Presenter}. (December 21, 2010). Xambó, A., Laney, R., Dobbyn, C., Jordà, S. “Multi-touch Interaction Techniques for Collaborative Music Activities". \emph{DMRN+5: Digital Music Research Network One-day Workshop 2010}, Queen Mary, University of London. London.\\
 \years{2010a} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
 \years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). “Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
-\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
+\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.\\
 
 
 \subsection*{Workshops}
 \noindent
 
+\years{2023} (March 3, 2023). "Situatedness meets live coding: A NIME approach". Workshop. \emph{Introduction to Making Digital Music Instruments}. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
+\years{2022} \textsc{Invited Talk/Workshop} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". Workshop. \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
 \years{2021d}Pardue, L., Martínez, J., \textbf{Xambó, A.}, Cavdir, D., Almeida, I. and Bin, A. (June 14, 2021). “Actions We Can Take to Improve Diversity and Inclusivity at NIME". Online workshop. \emph{NIME '21}, Shanghai, China.\\
 \years{2021c}\textbf{Xambó, A.}, Roig, S. (January 25/27/29, 2021). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{Leicester Hackspace}, Leicester, UK.\\
 \years{2021b}Pardue, L., Martínez, J. and \textbf{Xambó, A.} (January 14, 2021). “NIME Diversity Workshop". Online workshop.\\
 \years{2021a}\textbf{Xambó, A.}, Roig, S. (January 11/13/15, 2021). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{l'ull cec}, Barcelona, Spain.\\
 \years{2020c}\textbf{Xambó, A.}, Roig, S. (December 7/9/11, 2020). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{IKLECTIK}, London, UK.\\
-\years{2020b}\textbf{Xambó, A.} (September 25, 2020). “Creative Audio Programming for the Web with Tone.js". \emph{Women Who Code} workshop series, School of Media Arts, Columbia College Chicago, IL, USA.\\
-\years{2020a}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". \emph{NIME '20}. Birmingham, UK.\\
-\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
-\years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
-\years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
-\years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
-\years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
-\years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
-\years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.%\\[1.2cm]%hack
+\years{2020b}\textbf{Xambó, A.} (September 25, 2020). “Creative Audio Programming for the Web with Tone.js". Online workshop. \emph{Women Who Code} workshop series, School of Media Arts, Columbia College Chicago, IL, USA.\\
+\years{2020a}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". Online workshop. \emph{NIME '20}. Birmingham, UK.\\
+\years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". Workshop. \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
+\years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Workshop. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
+\years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". Workshop. \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
+\years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". Workshop. \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
+\years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". Workshop. \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
+\years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". Workshop. \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
+\years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". Workshop. \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
+\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". Workshop. \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.%\\[1.2cm]%hack
 
 \subsection*{Webinars}
 \noindent
@@ -601,6 +607,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \noindent
 
 \years{Forthcoming}Anna Xambó. “mnnw (extract)" (3 min 56 sec) in \emph{LOLtrax001} [WAV/MP3 files]. LOL Editions. \\	
+\years{2023}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec) in \emph{f:p podcast episode 128\_Ana Maria Romano G.} [Podcast]. female:pressure podcast. \\	
 \years{2020b}Anna Xambó. “Magnets" (4 min 21 sec) in \emph{Compassion Through Algorithms Vol. II} [WAV/MP3 files]. Sheffield: Light Entries. \\	
 \years{2020a}Anna Xambó. “Poème Symphonique For Tape Metronome: Variation I" (5 min 38 sec) in \emph{In Unison} [WAV/MP3 files]. Brussels: i.u. \\	
 \years{2019}Anna Xambó. “Kicks \& Cuts" (2 min 21 sec). in \emph{10th Anniversary Festival en Tiempo Real - WoNoMute Playlist} [WAV file].\\
@@ -612,6 +619,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Broadcasting}
 \noindent
 
+\years{2023}Anna Xambó's “traces". (February 13, 2023). TOPLAP w\/ QBRNTHSS \& Loopier (13.02.23).TOPLAP on Dublab.es. Barcelona, Spain.\\
 \years{2021c}Dirty Electronics Ensemble, Jon.Ogara \& Anna Xambó's “Dirty Dialogues". (November 8, 2021). Framework radio \#776\\
 \years{2021b}Anna Xambó's “Magnets". (April 12, 2021). Two Foot Left (Mixcloud playlist). Sheffield Live! Sheffield, UK.\\
 \years{2021a}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org (Ramon Casamajó). Audio Formal on Dublab.es. Barcelona, Spain.\\
@@ -635,7 +643,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
-\years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Peforming Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
+\years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
 \years{2022d}\textbf{Xambó, A.} (September 16, 2022). ``When virtual meets reality''. \emph{British Science Festival}, LCB Depot, Leicester, UK.\\
 \years{2022c}\textbf{Xambó, A.} (March 19, 2022). ``Make Noise Not War (live coding session)''. \emph{Algorave 10th Birthday Party}. Online event. Streaming from Sheffield, UK.\\
 \years{2022b}\textbf{Xambó, A.} (March 11, 2022). ``detuning a tuning (live coding piece)''. \emph{BEAST @ Centrala: Anna Xambó Sedó, Milad K. Mardakheh}. Centrala, Birmingham, UK.\\
@@ -1171,7 +1179,7 @@ Operating Systems: OS X, Windows and Linux desktop (Ubuntu).\\
 Programming: Actionscript, Assembly (basic level), C, CSS, Java, JavaScript, jQuery, MySQL, PHP, Python, Web Audio, XML.\\
 Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
-Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio analysis (Audition, Sonic Visualiser), audio measurement \& test (Lindos).\\
+Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio analysis (Audition, Sonic Visualiser, SPEAR), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
