--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -351,7 +351,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
-\years{2023}\textbf{Xambó, A.} (Forthcoming). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2).\\
+\years{2023}\textbf{Xambó, A.} (In Press). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2).\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
 {\years{2021}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2021) ``A General Framework for Visualization of Sound Collections in Musical Interfaces''. \emph{Applied Sciences}. 11(24):11926.\\
 {\years{2020}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
@@ -398,6 +398,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
+{\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 \years{2022b}Roma, G., \textbf{Xambó, A.} (2022). ``shreds''. In \emph{Proceedings of the Web Audio Conference 2022 (WAC '22)}. Cannes, France.\\
 \years{2022a}Goudarzi, V., \textbf{Xambó, A.} (2022). ``Ear to Waipapa Taumata Rau''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.\\
 \years{2021b}\textbf{Xambó, A.} (2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. In \emph{Proceedings of the Web Audio Conference 2021 (WAC '21)}. Barcelona, Spain.\\
@@ -446,18 +447,18 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2023} \textsc{Invited Talk} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
+\years{2023} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
 }. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
 \years{2022g} \textsc{Panel Member (online)} (December 13, 2022). "Music creation" with Rob Clouth (music creator), Marcelo Estrella (lawyer - Across Legal), Antonia Folguera (curator - SONAR), Anna Xambó (researcher and music creator - Institute of Sonic Creativity, DeMontfort University). Moderated by Sergi Jordà and Karma Peiró. \emph{Challenges and Opportunities in Music Tech - Open Debate}. Universitat Pompeu Fabra, Barcelona, Spain / online.\\ 
 \years{2022f} \textsc{Invited Talk/Workshop} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
 \years{2022e} \textsc{Invited Talk} (November 11, 2022). "HCI meets AI in Live Coding: A Practitioner's Perspective". \emph{Symposium Technoscientific
 Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, Finland. \href{https://vimeo.com/779151561}{[video]}\\ 
-\years{2022d} \textsc{Invited Talk (online)} (October 26, 2022). "Designing networked algorithmic music performances - Creative coding as practice-led research". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Computational Music for All, GTCMT, Georgia Tech, Atlanta, GA, USA.\\ 
+\years{2022d} \textsc{Invited Talk (online)} (October 26, 2022). "Designing networked algorithmic music performances - Creative coding as practice-led research". Computational Music for All, GTCMT, Georgia Tech, Atlanta, GA, USA.\\ 
 \years{2022c} \textsc{Oral Presenter (online)} together with Goudarzi, V. (June 30, 2022). “The Mobile Audience as a Digital Musical Persona in Telematic Performance". \emph{NIME '22}. \emph{Waipapa Taumata Rau, Aotearoa / The University of Auckland}, New Zealand. \href{https://youtu.be/xu5ySfbqYs8}{[video]}\\
-\years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France.\\ 
+\years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France. \href{https://clap.univ-eiffel.fr/channels/#ccaman-journee-detude-internationale-sound-designed-futures-new-realities-spaces-technologies}{[video]}\\ 
 \years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". Music-data seminar series. \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
 \years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). "Grassrouters Music Performance: Past, Present and Future Directions of Grassroots \& Decentralised Organisation Structures for Network Music Performance". \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
-\years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K. (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
+\years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K. (June 19, 2021). ``Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
 \years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
 \emph{NYU Shanghai}, Shanghai, China. \href{https://youtu.be/F4UoH1hRMoU}{[video]}\\
 \years{2021e} \textsc{Oral Presenter (online)} (May 21, 2021). “Audience engagement in musical performances through on-site and online networks". \emph{Computer Networks meet Music Instruments}. COSY Colloquium, Faculty of Computer Science, University of Vienna. Vienna, Austria.\\ 
@@ -554,14 +555,14 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2010b} \textsc{Poster Presenter}. (December 21, 2010). Xambó, A., Laney, R., Dobbyn, C., Jordà, S. “Multi-touch Interaction Techniques for Collaborative Music Activities". \emph{DMRN+5: Digital Music Research Network One-day Workshop 2010}, Queen Mary, University of London. London.\\
 \years{2010a} \textsc{Poster Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
 \years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). “Interfaces for Sketching Musical Compositions". \emph{SMC Summer School 2008}. Genoa, Italy.\\
-\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.\\
+\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008). “A Tabletop Waveform Editor for Live Performance". \emph{NIME '08}. Genoa, Italy.
 
 
 \subsection*{Workshops}
 \noindent
 
-\years{2023} (March 3, 2023). "Situatedness meets live coding: A NIME approach". Workshop. \emph{Introduction to Making Digital Music Instruments}. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
-\years{2022} \textsc{Invited Talk/Workshop} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". Workshop. \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
+\years{2023} \textbf{Xambó, A.} (March 3, 2023). "Situatedness meets live coding: A NIME approach". \textsc{Invited Talk / Workshop}. \emph{Introduction to Making Digital Music Instruments}. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
+\years{2022} \textbf{Xambó, A.} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \textsc{Invited Talk/Workshop}. \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
 \years{2021d}Pardue, L., Martínez, J., \textbf{Xambó, A.}, Cavdir, D., Almeida, I. and Bin, A. (June 14, 2021). “Actions We Can Take to Improve Diversity and Inclusivity at NIME". Online workshop. \emph{NIME '21}, Shanghai, China.\\
 \years{2021c}\textbf{Xambó, A.}, Roig, S. (January 25/27/29, 2021). “Performing With a Virtual Agent: Machine Learning for Live Coding". Online workshop. \emph{Leicester Hackspace}, Leicester, UK.\\
 \years{2021b}Pardue, L., Martínez, J. and \textbf{Xambó, A.} (January 14, 2021). “NIME Diversity Workshop". Online workshop.\\
@@ -599,9 +600,9 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 
 \years{2021}Dirty Electronics Ensemble, Jon.Ogara, and Anna Xambó. \emph{Dirty Dialogues} (live album) [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas discos.\\
 \years{2019}Anna Weisling and Anna Xambó. \emph{Beacon} (EP) [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
-\years{1996}La Más Fina. \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
-\years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
-\years{1992}Sosa's Cáustica. \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.
+\years{1996}La Más Fina. \emph{Zande Phondex}. Promo [CD]. Barcelona: Apache Productions.\\
+\years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina}. Promo [Cassette]. Barcelona: Self-released.\\
+\years{1992}Sosa's Cáustica. \emph{Paraponera Clavata}. Promo [Cassette]. Barcelona: Murmur Town.
 
 \subsection*{Participation in Compilations}
 \noindent
@@ -619,8 +620,9 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Broadcasting}
 \noindent
 
-\years{2023}Anna Xambó's “traces". (February 13, 2023). TOPLAP w\/ QBRNTHSS \& Loopier (13.02.23).TOPLAP on Dublab.es. Barcelona, Spain.\\
-\years{2021c}Dirty Electronics Ensemble, Jon.Ogara \& Anna Xambó's “Dirty Dialogues". (November 8, 2021). Framework radio \#776\\
+\years{2023b}Anna Xambó's “traces", “residual", “triads" \& “clock". (April 24, 2023). Framework radio \#842.\\
+\years{2023a}Anna Xambó's “traces". (February 13, 2023). TOPLAP w\/ QBRNTHSS \& Loopier (13.02.23). TOPLAP on Dublab.es. Barcelona, Spain.\\
+\years{2021c}Dirty Electronics Ensemble, Jon.Ogara \& Anna Xambó's “Dirty Dialogues". (November 8, 2021). Framework radio \#776.\\
 \years{2021b}Anna Xambó's “Magnets". (April 12, 2021). Two Foot Left (Mixcloud playlist). Sheffield Live! Sheffield, UK.\\
 \years{2021a}Anna Xambó's “Magnets". (February 2, 2021). TOPLAP \#2 w/ hangar.org (Ramon Casamajó). Audio Formal on Dublab.es. Barcelona, Spain.\\
 \years{2020}Anna Xambó's “Magnets". (November 9, 2020). Sleepsang - Hyperobjects w/ Sleepsang (Mixcloud playlist). Sheffield, UK.\\
@@ -629,7 +631,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2018b}Anna Xambó's “H2RI.011". (June 10, 2018). NILUCCIO ON NOISE. Podcast \#154 (May 2018).\\
 \years{2018a}Anna Xambó's “H2RI.07". (May 17, 2018). No Pigeonholes EXP on KOWS-FM.\\
 \years{2013f}peterMann's “og02". (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
-\years{2013e}peterMann's “og01", og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
+\years{2013e}peterMann's “og01", “og05", “og07" \& “og09". (June 23, 2013). Framework radio \#426.\\
 \years{2013d}peterMann's “og01". (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio. Boston, MA, USA.\\
 \years{2013c}peterMann's “og01" \& “og10". (March 2, 2013). Onda Sonora.\\
 \years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera. Madrid, Spain.\\
@@ -928,7 +930,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 %\noindent
 
 \subsection*{PhD Students}
-\years{§1/2022--present}2nd supervisor of Christopher Cousin. DMU.\\
+\years{11/2022--present}2nd supervisor of Christopher Cousin. DMU.\\
 \years{08/2022--present}2nd supervisor of Sam Topley. DMU.\\
 \years{04/2022--present}2nd supervisor of Eva Kára. DMU.
 
@@ -978,7 +980,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \noindent
 
 \years{06/2020--2021}\href{https://mirlca.dmu.ac.uk}{MIRLCAuto}, the website and blog of the research project \emph{MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding}. Creator and Author.\\ 
-\years{09/2018--12/2019}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
+\years{09/2018--12/2019}\href{http://wonomute.github.io}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
 \years{08/2018--12/2019}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
 \years{05/2017--07/2018}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Coordinator, Reviewer and Author.\\ 
 \years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Creator and Author.\\ 
@@ -1004,6 +1006,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \emph{International Computer Music Association (ICMA)}.\\
 \emph{Intersections, Feminism, Technology \& Digital Humanities network (IFTe).}
 
+\subsection*{Membership of External Committees}
+\noindent
+\years{01/2023--present}\textsc{Steering Committee Member}, Live Interfaces Journal.
 
 \subsection*{Academic Programme Leader}
 \noindent
@@ -1069,7 +1074,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2022}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2022).\\
+\years{2018--2023}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2022).\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
@@ -1093,7 +1098,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
 \years{2018b}\emph{Journal of New Music Research}. Taylor \& Francis.\\
 \years{2018a}\emph{Transactions on Computing Education}. ACM.\\
-\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society (2017, 2022).\\
+\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society (2017, 2022, 2023).\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.\\
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.
@@ -1183,7 +1188,7 @@ Music \& Audio Apps: DAWs (Ableton, Cubase, Live, Logic Pro, Reaper), Max/MSP, P
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
-Hardware: Arduino, Bela, Lindos, Raspberry Pi.\\
+Hardware: Arduino, Bela, Lindos, micro:bit, Raspberry Pi.\\
 Circuit simulators: Fritzing, Tinkercad, OrCAD.
 
 %\vspace{1cm}
