--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -213,6 +213,13 @@ Role: Creator \& Director.
 
 \subsection*{Principal Investigator}
 
+\years{09/2023--08/2025}\textsc{AHRC Early Career Research Grant} \\
+Funding body: AHRC. \\
+Project: "Sensing the Forest - Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI".\\
+Role: Lead Researcher/Coordinator. \\
+Total Pound Amount: \pounds250,000 \\
+
+
 \years{05/2022--06/2022}\textsc{Living in a Digital Society - Spotlight Funding Round 2} \\
 Funding body: DMU. \\
 Project: Development fund for research grant preparation.\\
@@ -367,6 +374,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
+{\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 {\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (2022) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
 {\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (2021) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 {\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK. pp. 55--60.}\\
@@ -398,7 +406,6 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
-{\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 \years{2022b}Roma, G., \textbf{Xambó, A.} (2022). ``shreds''. In \emph{Proceedings of the Web Audio Conference 2022 (WAC '22)}. Cannes, France.\\
 \years{2022a}Goudarzi, V., \textbf{Xambó, A.} (2022). ``Ear to Waipapa Taumata Rau''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.\\
 \years{2021b}\textbf{Xambó, A.} (2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. In \emph{Proceedings of the Web Audio Conference 2021 (WAC '21)}. Barcelona, Spain.\\
@@ -447,7 +454,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2023} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
+\years{2023b} \textsc{Invited Talk/Workshop} (June 7, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Creative Technologies II}. Creative Technologies Master's Program, Film Universität Babelsberg Konrad Wolf, Potsdam, Germany.\\ 
+\years{2023a} \textsc{Invited Talk/Workshop} (March 3, 2023). "About NIMEs, NIMEing and Speculative Futures". \emph{Introduction to Making Digital Music Instruments
 }. LEADD:NG, University of Nottingham, Nottingham, UK.\\ 
 \years{2022g} \textsc{Panel Member (online)} (December 13, 2022). "Music creation" with Rob Clouth (music creator), Marcelo Estrella (lawyer - Across Legal), Antonia Folguera (curator - SONAR), Anna Xambó (researcher and music creator - Institute of Sonic Creativity, DeMontfort University). Moderated by Sergi Jordà and Karma Peiró. \emph{Challenges and Opportunities in Music Tech - Open Debate}. Universitat Pompeu Fabra, Barcelona, Spain / online.\\ 
 \years{2022f} \textsc{Invited Talk/Workshop} (December 8, 2022). "Machine listening and machine learning using MIRLC/a". \emph{Computer Programming for Musicians}. Department of Performing Arts, School of Communication and Creativity, City, University of London, UK.\\ 
@@ -645,6 +653,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
+\years{2023}\textbf{Xambó, A.} (June 14, 2023). ``Ceci n'est pas une usine''. \emph{+RAIN Film Fest}, Universitat Pompeu Fabra/Sonar+D, Barcelona, Spain.\\ 
 \years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
 \years{2022d}\textbf{Xambó, A.} (September 16, 2022). ``When virtual meets reality''. \emph{British Science Festival}, LCB Depot, Leicester, UK.\\
 \years{2022c}\textbf{Xambó, A.} (March 19, 2022). ``Make Noise Not War (live coding session)''. \emph{Algorave 10th Birthday Party}. Online event. Streaming from Sheffield, UK.\\
@@ -876,7 +885,7 @@ Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{11/1999--06/2003}
 Course: \emph{Computer Animation} (90 h). \# Students: $\sim$15. \\ 
 Media Art Institute Fak d'Art, Barcelona.\\ 
-Role: Creation of syllabus, creation of content, instruction and assessment.
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 
 \subsection*{Professional Courses}
 \noindent
@@ -1068,13 +1077,14 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
 
+\years{2023}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
 \years{2020a}\emph{Network Music Festival} (2020).\\
 \years{2019b}\emph{Workshop on Ubiquitous Music} (2020).\\
 \years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2023}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2022).\\
+\years{2018--2023}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2023).\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
@@ -1086,7 +1096,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
 \years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction (TEI)} (2012--2018).\\
-\years{2011--2018}\emph{New Interfaces for Musical Expression (NIME)} (2011--2018).
+\years{2011--2018}\emph{New Interfaces for Musical Expression (NIME)} (2011--2018).\\
 
 \subsection*{Journal Reviewer}
 \noindent
