--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -61,8 +61,8 @@
 \usepackage[%dvipdfm, 
 bookmarks, colorlinks, breaklinks, 
 % ---- FILL IN HERE THE TITLE AND AUTHOR
-	pdftitle={Anna Xambó - vita},
-	pdfauthor={Anna Xambó},
+	pdftitle={Anna Xambó Sedó - vita},
+	pdfauthor={Anna Xambó Sedó},
 	pdfproducer={http://nitens.org/taraborelli/cvtex}
 ]{hyperref}  
 \hypersetup{linkcolor=blue,citecolor=blue,filecolor=black,urlcolor=MidnightBlue,linkcolor=MidnightBlue} 
@@ -94,7 +94,7 @@ bookmarks, colorlinks, breaklinks,
 
 \pagenumbering{gobble} % this suppresses page numbering
 
-{\textbf{Anna Xambó}}\\ 
+{\textbf{Anna Xambó Sedó}}\\ 
 Senior Lecturer in Music and Audio Technology, De Montfort University (DMU) -- \href{http://annaxambo.me/}{annaxambo.me}\\
 
 {\textbf{Education}}\\
@@ -105,17 +105,17 @@ BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 {\textbf{Employment}}\\
 Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audio electronics, studio technology and DSP. 
 I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--19) and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
-I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
+I have been working for 10 years (2000--10) as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
 
-{\textbf{Grants/Awards/Accolades}} from DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
+{\textbf{Grants/Awards/Accolades}} from AHRC (2023--25); DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
-{\textbf{Peer-Reviewed Journal Publications}} in MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
+{\textbf{Peer-Reviewed Journal Publications}} in Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--21); Web Audio Conference (WAC) (2017--21); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22); Web Audio Conference (WAC) (2017--22); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
 
 {\textbf{Invited Keynote Talks}} at WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
-{\textbf{Performances}} at EarTaxi (2021); Jefferson Park EXP (2021); Network Music Festival (2020); Eulerroom Equinox (2020); PACE/DMU (2020--21); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--21); Cube Fest (2018); NIME (2017--18, 2021); TEI  (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
+{\textbf{Performances}} at +RAIN (2023); Cafe OTO (2022); British Science Festival (2022); BEAST (2022); EarTaxi (2021); Jefferson Park EXP (2021); Network Music Festival (2020); Eulerroom Equinox (2020); PACE/DMU (2020--21); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--22); Cube Fest (2018); NIME (2017--18, 2021--22); TEI  (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
 {\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); Computational Creativity (2017, local committee member).\\
 
@@ -130,7 +130,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 %\hrulefill
 
 \begin{center}
-{\scriptsize  Anna Xambó •\- Brief Curriculum Vitae •\- Last updated: \today\- •\- %original: Last updated: \today\- •\- 
+{\scriptsize  Anna Xambó Sedó •\- Brief Curriculum Vitae •\- Last updated: \today\- •\- %original: Last updated: \today\- •\- 
 % ---- PLEASE LEAVE THIS BACKLINK FOR ATTRIBUTION AS PER CC-LICENSE
 Typeset in \href{http://nitens.org/taraborelli/cvtex}{
 %\fontspec{Times New Roman}
