--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -61,8 +61,8 @@
 \usepackage[%dvipdfm, 
 bookmarks, colorlinks, breaklinks, 
 % ---- FILL IN HERE THE TITLE AND AUTHOR
-	pdftitle={Anna Xambó - vita},
-	pdfauthor={Anna Xambó},
+	pdftitle={Anna Xambó Sedó - vita},
+	pdfauthor={Anna Xambó Sedó},
 	pdfproducer={http://nitens.org/taraborelli/cvtex}
 ]{hyperref}  
 \hypersetup{linkcolor=blue,citecolor=blue,filecolor=black,urlcolor=MidnightBlue,linkcolor=MidnightBlue} 
@@ -75,7 +75,7 @@ bookmarks, colorlinks, breaklinks,
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
-\lfoot{Anna Xambó, PhD}
+\lfoot{Anna Xambó Sedó, PhD}
 \cfoot{Curriculum Vitae}%removes pagination at the center of the footer
 \rfoot{\thepage\ of \pageref{LastPage}}
 
@@ -95,7 +95,7 @@ bookmarks, colorlinks, breaklinks,
 
 % DOCUMENT
 \begin{document}
-{\Huge Anna Xambó}\\[0.1cm]
+{\Huge Anna Xambó Sedó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
 \emph{Senior Lecturer in Music and Audio Technology}\\
 Leicester Media School\\
@@ -197,7 +197,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 kr, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
 %\years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 kr, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
-\years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
+\years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded a conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
 
@@ -213,7 +213,7 @@ Role: Creator \& Director.
 
 \subsection*{Principal Investigator}
 
-\years{09/2023--08/2025}\textsc{AHRC Early Career Research Grant} \\
+\years{09/2023--08/2025}\textsc{AHRC Early Career Research Grant (AH/X011585/1)} \\
 Funding body: AHRC. \\
 Project: "Sensing the Forest - Let the Forest Speak using the Internet of Things, Acoustic Ecology and Creative AI".\\
 Role: Lead Researcher/Coordinator. \\
@@ -232,7 +232,7 @@ Project: Development fund that is part of the FRL Programme.\\
 Role: Lead Researcher/Coordinator. \\
 Total Pound Amount: \pounds1,000 \\
 
-\years{04/2020-10/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant} \\
+\years{04/2020-10/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant (EP/R045178/1)} \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
@@ -411,7 +411,7 @@ Total Euro Amount: \euro3,000
 \years{2021b}\textbf{Xambó, A.} (2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. In \emph{Proceedings of the Web Audio Conference 2021 (WAC '21)}. Barcelona, Spain.\\
 \years{2021a}\textbf{Xambó, A.} (2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 \years{2019b}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
-\years{2019a}Støckert, R., Jensenius, A.R., \textbf{Xambó, A.}, Brandtsegg, Ø. (2019). ``A Case Study in Learning Spaces for Physical-Virtual Two-Campus Interaction''. In \emph{Proceedings of the European University Information Systems (EUNIS)}. \emph{Dørup Award winning paper}.\\ 
+\years{2019a}Støckert, R., Jensenius, A.R., \textbf{Xambó, A.}, Brandtsegg, Ø. (2019). ``A Case Study in Learning Spaces for Physical-Virtual Two-Campus Interaction''. In \emph{Proceedings of the European University Information Systems (EUNIS)}. \emph{Dørup Award-winning paper}.\\ 
 Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
 \years{2018b}Skach, S., \textbf{Xambó, A.}, Turchet, L., Stolfi, A., Stewart, B., Barthet, M. (2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 80--87.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (2018). “Beacon: Exploring Physicality in Digital Performance". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 586--591.\\
@@ -464,7 +464,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2022d} \textsc{Invited Talk (online)} (October 26, 2022). "Designing networked algorithmic music performances - Creative coding as practice-led research". Computational Music for All, GTCMT, Georgia Tech, Atlanta, GA, USA.\\ 
 \years{2022c} \textsc{Oral Presenter (online)} together with Goudarzi, V. (June 30, 2022). “The Mobile Audience as a Digital Musical Persona in Telematic Performance". \emph{NIME '22}. \emph{Waipapa Taumata Rau, Aotearoa / The University of Auckland}, New Zealand. \href{https://youtu.be/xu5ySfbqYs8}{[video]}\\
 \years{2022b} \textsc{Invited Talk (online)} (May 27, 2022). "Betwixt and Between Sound-Based Music and Sound Design". \emph{Sound Design(ed) Futures: new realities, spaces, technologies}. Université Gustave Eiffel, Champs-sur-Marne, France. \href{https://clap.univ-eiffel.fr/channels/#ccaman-journee-detude-internationale-sound-designed-futures-new-realities-spaces-technologies}{[video]}\\ 
-\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". Music-data seminar series. \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
+\years{2022a} \textsc{Invited Talk (online)} (April 25, 2022). "Data-Driven Sound-Based Music". Music-data seminar series. \emph{AHRC Datasounds, datasets and datasense: Unboxing the hidden layers between musical data, knowledge and creativity}. The University of York. York, UK. \href{https://youtu.be/8ootXx1csJQ}{[video]}\\ 
 \years{2021h} \textsc{Keynote Speaker (online)} (July 5, 2021). "Grassrouters Music Performance: Past, Present and Future Directions of Grassroots \& Decentralised Organisation Structures for Network Music Performance". \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
 \years{2021g} \textsc{Oral Presenter (online)} together with Jawad, K. (June 19, 2021). ``Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}. Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
 \years{2021f} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
@@ -486,7 +486,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \years{2018i}\textsc{Panel Member}. (November 15, 2018). \emph{Panel: Future of the Music Industries} with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
 \years{2018h}\textsc{Panel Member}. (October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
 \years{2018g} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
-\years{2018f} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. \emph{University of Wrexham}, Wrexham, UK.\\
+\years{2018f} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. The \emph{University of Wrexham}, Wrexham, UK.\\
 \years{2018e} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
 \years{2018d}\textsc{Panel Member}. (July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 \years{2018c}\textsc{Panel Member}. (June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
@@ -933,7 +933,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
 Escola Glòries, Barcelona.\\
-Role: Co-creation of syllabus, creation of content, instruction and assessment.%\\ [1.3cm]%hack
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\ [1.3cm]%hack
 
 \section*{Supervision}
 %\noindent
@@ -945,10 +945,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Master Students}
 \years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth. Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}. Master programme: Music Technology and Innovation, DMU. \\
-\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) and the work at WoNoMute has inspired this work.\\
+\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad. Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Master programme: Music Communication Technology, NTNU. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) and the work at WoNoMute have inspired this work.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru. Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}. Computer Science, QMUL.\\
-\years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
-\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
+\years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work, we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
+\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work, we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \subsection*{Undergraduate Students}
 \years{09/2021--06/2022}Supervision of two L6 undergraduate students in music technology for their \emph{MATT3000 Research Project}: Abbey Young's  ``A Practice-based Analysis of Practical Workshops to Improve Gender Equality in Music Technology Education in the UK'' and Tolu Ikuyinminu's ``Investigating the Positive and Negative Impacts of the `UK Drill' Genre on Generation Z''. 
@@ -1077,7 +1077,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
 
-\years{2023}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
+\years{2023b}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
+\years{2023a}\emph{International Conference on Live Coding (ICLC)} (2023).\\
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
 \years{2020a}\emph{Network Music Festival} (2020).\\
 \years{2019b}\emph{Workshop on Ubiquitous Music} (2020).\\
@@ -1089,7 +1090,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
-\years{2016, 2020}\emph{International Conference on Live Interfaces (ICLC)} (2016, 2020).\\
+\years{2016, 2020}\emph{International Conference on Live Interfaces (ICLI)} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
 \years{2016--2022}\emph{Web Audio Conference (WAC)} (2016--2022).\\
 \years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction (CHI)} (2015--2021).\\
@@ -1139,7 +1140,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2020}\emph{Pamela Z Award for Innovation (NIME '20)}, Royal Birmingham Conservatoire, Birmingham, UK.\\
 \years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, UFRGS, Porto Alegre, Brazil.\\
 \years{2018}\emph{COLLAB2018}, Institute of Electronic Music and Acoustics (IEM), University of Music and Performing Arts. Graz, Austria.\\
-\years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
+\years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
 
 \subsection*{Music Judge}
 \noindent
@@ -1161,7 +1162,7 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 \years{01/2019--05/2020}\emph{WebAudioConf.com} \\
 Usability supervisor and project coordinator of a sustainable website that hosts the online proceedings of the Web Audio Conference.\\
 \years{08/2018--12/2019}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
-Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU in collaboration with University of Oslo (UiO) that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.\\
+Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU in collaboration with the University of Oslo (UiO) that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.\\
 \years{2009--present}\emph{Carpal Tunnel}, Barcelona, Spain.\\
 Co-Founder of the online music record label Carpal Tunnel.\\
 \years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
@@ -1199,14 +1200,14 @@ Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
 Hardware: Arduino, Bela, Lindos, micro:bit, Raspberry Pi.\\
-Circuit simulators: Fritzing, Tinkercad, OrCAD.
+Circuit simulators: Fritzing, OrCAD, Tinkercad.
 
 %\vspace{1cm}
 \vfill{}
 %\hrulefill
 
 \begin{center}
-{\scriptsize  Anna Xambó •\- Curriculum Vitae •\- Last updated: \today\- •\- %original: Last updated: \today\- •\- 
+{\scriptsize  Anna Xambó Sedó •\- Curriculum Vitae •\- Last updated: \today\- •\- %original: Last updated: \today\- •\- 
 % ---- PLEASE LEAVE THIS BACKLINK FOR ATTRIBUTION AS PER CC-LICENSE
 Typeset in \href{http://nitens.org/taraborelli/cvtex}{
 %\fontspec{Times New Roman}
